@@ -1,0 +1,7 @@
+fileFormatVersion: 2
+guid: a10695387e503c74c9e39014fd22c4af
+PrefabImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
