@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 6971c0920f42d264f9560adace2bab1f
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
