@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: 9f773666b5370a644ba9890a46be717e
+NativeFormatImporter:
+  externalObjects: {}
+  mainObjectFileID: 2100000
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
