@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: c5b7f2b20a38333488d13f3a0546cce6
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
